Switch naming structure for new design and spacing fixes

--- a/code/less/style-new-red.less
+++ b/code/less/style-new-red.less
@@ -2,7 +2,7 @@
 @import "templates/responsive-new";
 
 body {
-	.gradient(top, #cccccc, #d4d4d4, #d4d4d4);
+	background: #CCCCCC;
 }
 
 // ----------------------------------------------------------------------------------
