--- a/code/less/templates/new.less
+++ b/code/less/templates/new.less
@@ -202,6 +202,13 @@ blockquote {
 	}
 }
 
+#grid-top,
+#grid-top2 {
+  	.padding-size {
+		padding: 32px 32px 0;
+  	}
+}
+
 #header {
   	.border-radius(6px 6px 0 0);
   	margin-top: 20px;
@@ -528,7 +535,8 @@ p.readmore {
   	.border-radius(0 6px 0);
 }
 
-#grid-bottom {
+#grid-bottom,
+#grid-top2 {
 	background: @grayDark;
   	* {
 	  	color: @color_six;
